--- a/src/components/MainContent.css
+++ b/src/components/MainContent.css
@@ -45,11 +45,52 @@ button {
     width: 50%;
     margin: 1rem auto;
     border: 1px solid #ccc;
-    padding: 2rem;
+    padding: 1rem;
     height: 100px;
     text-align: center;
 }
 
 h3 { 
     margin-bottom: 1rem;
+}
+
+/* CELULAR */ 
+@media screen and (max-width: 600px) {
+    main {
+        width: 100%
+    }
+    
+    form {
+        width: 90%;
+        padding: 1rem .5rem;
+    }
+    
+    label, 
+    input {
+        width: 90%;
+        margin: 0 auto;
+    }
+    
+    input {
+        margin: .5rem auto;
+        text-align: start;
+    }
+    
+    button {
+        width: 80%;
+    }
+    
+    #show-result {
+        width: 90%;
+        margin: 1rem auto;
+        border: 1px solid #ccc;
+        padding: .5rem 1rem;
+        height: 100px;
+        text-align: center;
+    }
+    
+    h3 { 
+        margin-bottom: 1rem;
+    }
+    
 }
