--- a/src/components/MainContent.css
+++ b/src/components/MainContent.css
@@ -54,6 +54,38 @@ h3 {
     margin-bottom: 1rem;
 }
 
+#show-result p {
+    margin: 5px 0;
+}
+
+#btn-calc {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-spacing {
+    margin-left: 8px;
+    font-size: 14px;
+}
+
+#history {
+    border: 2px solid #000;
+    width: 80%;
+    margin: 1rem auto;
+    padding: 1rem;
+    text-align: center;
+}
+
+#history ul{
+    display: flex;
+    flex-direction: column;
+}
+
+#history ul li {
+    margin: 5px 0;
+}
+
 /* CELULAR */ 
 @media screen and (max-width: 600px) {
     main {
@@ -91,6 +123,10 @@ h3 {
     
     h3 { 
         margin-bottom: 1rem;
+    }
+
+    #history {
+        width: 90%;
     }
     
 }
